tests/error/result_errors/result_array_not_numeric.err
Error: Invalid Result (at $FILE:7:18)
  | 
5 | @compile_guppy
6 | def foo(x: array[tuple[int, bool], 42]) -> None:
7 |     result("foo", x)
  |                   ^ Expression of type `array[(int, bool), 42]` is not a valid
  |                     result.

Note: Only numeric values or arrays thereof are allowed as results

Guppy compilation failed due to 1 previous error
